# wavr

./: .dockerignore  .gitignore  CLAUDE.md  LICENSE  PRODUCT.md  README.md  docker-compose.yml
.github/: FUNDING.yml
.github/workflows/: tests.yml
_fable/2026-07-03/review/: wavr--quality.md
backend/: .env.example  Dockerfile  pyproject.toml
backend/tests/: conftest.py  test_a5_hardening.py  test_api_connectors_deps.py  test_api_devices_deps.py  test_api_identity_deps.py  test_api_nodes.py  test_api_pair_requests.py  test_app.py  test_arp_block.py  test_assistant.py  test_away.py  test_away_wiring.py  test_ble.py  test_bonded.py  test_calib_refine.py  test_calib_sample.py  test_calib_session.py  test_calib_store.py  test_calibration_api.py  test_camera_api.py  test_camera_health.py  test_camera_safety.py  test_camera_source.py  test_camera_store.py  test_camera_url.py  test_chaos.py  test_companion_health_ota.py  test_companion_presence.py  test_companion_presence_api.py  test_config.py  test_connector_digest.py  test_connector_enrich.py  test_connector_http.py  test_connector_notify.py  test_connectors.py  test_consent_api.py  test_consent_tier.py  test_core_pin_api.py  test_derived_mqtt.py  test_device_catalog_taxonomy.py  (+111 more)
backend/wavr/: alert_severity.py  api_assistant.py  api_connectors.py  api_devices.py  api_identity.py  api_inventory.py  api_nodes.py  api_pair_requests.py  api_peers.py  api_routines.py  app.py  arp_block.py  assistant_engine.py  assistant_store.py  auth.py  away.py  bonded.py  calib_refine.py  calib_sample.py  calib_session.py  calib_store.py  camera_health.py  camera_privacy.py  camera_store.py  camera_url.py  companion_presence.py  config.py  connector_store.py  device_meta.py  devices.py  dhcp_monitor.py  diagnostics.py  doctor.py  events.py  fall_detect.py  fusion.py  gateway_monitor.py  ha_client.py  ha_discovery.py  ha_import.py  (+50 more)
backend/wavr/connectors/: __init__.py  diag.py  http.py
backend/wavr/connectors/enrich/: __init__.py  abuseipdb.py  open_meteo.py  urlhaus.py  wikipedia.py
backend/wavr/connectors/notify/: __init__.py  digest.py  telegram.py
backend/wavr/data/: deviceclass.py  oui.py  ports.py
backend/wavr/sources/: _dhcp_raw.py  base.py  ble.py  camera.py  chaos.py  dhcp.py  dhcp_fp.py  mdns.py  mmwave.py  netbios.py  network.py  onvif.py  phone.py  ruview.py  simulated.py  snmp.py  ssdp.py
core-launcher/: .gitignore  build.gradle  gradle.properties  settings.gradle
core-launcher/app/: build.gradle  proguard-rules.pro
desktop/: .gitignore  BUILD.md  package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: README.md
desktop/src-tauri/src/: main.rs
docs/: NODE-ONBOARDING.md  ROADMAP.md  ha-fusion-brief.md  mcp-connect.md  mcp-http-transport-spec.md  seams.md
docs/adr/: 0001-ruview-audit-mmwave-over-fork.md  0002-privacy-boundaries-ram-only.md  0003-not-a-medical-device.md  0004-defensive-only-reject-offensive.md  0005-mcp-control-boundary.md  0006-authenticated-lan-access.md  0007-desktop-shell.md  0008-mcp-http-transport.md
docs/deploy/: bring-up-and-expansion.md  multi-device.md  tapo-camera-bringup.md
docs/network-fixes/: README.md  eir.md  known-limitations.md  sky.md  tp-link.md  unifi.md  virgin-media-hub.md  vodafone.md  wavr-network-requirements.md
docs/superpowers/plans/: 2026-07-01-wavr-A-fusion-foundation.md  2026-07-01-wavr-B-real-sources.md  2026-07-01-wavr-camada-1.md  2026-07-02-wavr-C-camera-cv.md  2026-07-02-wavr-D-position-radar.md  2026-07-02-wavr-camada2-rules-mqtt.md  2026-07-02-wavr-camada3-4-away-narration.md  2026-07-02-wavr-camera-hardening.md  2026-07-02-wavr-deploy-fase1-docker.md  2026-07-02-wavr-frontend-surface-c3c4.md  2026-07-02-wavr-in-app-camera-config.md  2026-07-03-graphify-setup.md  2026-07-03-house-maquette-editor.md  2026-07-07-wavr-mobile-core-attachment-phase1.md  2026-07-09-wavr-cross-instance-fusion.md  2026-07-09-wavr-peer-discovery-pairing.md  2026-07-09-wavr-portable-credentials.md  2026-07-09-wavr-remote-config-propagation.md
docs/superpowers/specs/: 2026-07-01-wavr-design.md  2026-07-03-graphify-setup-design.md  2026-07-03-house-maquette-editor-design.md  2026-07-03-multi-device-client-auth-design.md  2026-07-03-tauri-desktop-shell-design.md  2026-07-06-companion-network-presence-registration-design.md  2026-07-06-wavr-core-12t-pro-design.md  2026-07-06-wavr-core-panel-design.md  2026-07-06-wavr-product-taxonomy-design.md  2026-07-07-wavr-mobile-core-attachment-design.md  2026-07-07-wavr-pass-design.md  2026-07-09-wavr-cross-instance-fusion-design.md  2026-07-09-wavr-peer-pairing-IMPLEMENTATION-DIRECTIVES.md  2026-07-09-wavr-peer-pairing-c1-fix-design.md  2026-07-11-wavr-sensor-node-onboarding-design.md
firmware/: NODE_PROTOCOL.md  README.md
firmware/wavr_node/: platformio.ini
firmware/wavr_node/include/: config.h
firmware/wavr_node/src/: kill_switch.cpp  kill_switch.h  main.cpp  ota_update.cpp  ota_update.h  status_led.cpp  status_led.h  tls_pin.cpp  tls_pin.h  wavr_client.cpp  wavr_client.h  wifi_provision.cpp  wifi_provision.h
frontend/: index.html  manifest.webmanifest  measure.html  sw.js
graphify-out/: .graphify_labels.json  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
graphify-out/2026-07-03/: .graphify_labels.json  GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/cache/: stat-index.json
infra/wavr-diag-worker/: wrangler.toml
infra/wavr-diag-worker/functions/: report.js
infra/wavr-diag-worker/public/: index.html
mobile/: capacitor.config.ts  package-lock.json  package.json
mobile/android/: build.gradle
mobile/android/app/: build.gradle
mobile/plugins/wavr-bluetooth/: WavrBluetoothPlugin.kt
mobile/plugins/wavr-health/: WavrHealthPlugin.kt
mobile/plugins/wavr-net/: PinnedClient.kt  (+1 more)
mobile/scripts/: sync-frontend.mjs
mobile/src/: wavr-lib.js  wavr-mobile-shim.js
mobile/test/: wavr-lib.test.js
scripts/: chaos_demo.py  gen_oui.py  install-autostart.ps1  uninstall-autostart.ps1  wavr-desktop.ps1  wavr-headless.ps1  wavr-open.ps1  wavr.ps1
(+31 files in other folders)
