[project]
name = "wavr"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "python-dotenv>=1.0",
  "websockets>=12",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "httpx>=0.27"]
camera = ["opencv-python>=4.9", "ultralytics>=8.2"]
mqtt = ["paho-mqtt>=2.0"]
genai = ["google-generativeai>=0.7"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["wavr*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
