[project]
name = "wavr"
version = "0.1.0"
requires-python = ">=3.11"
license = { text = "AGPL-3.0-or-later" }
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "python-dotenv>=1.0",
  "websockets>=12",
  # numpy is imported unconditionally by wavr.app (via calib_store -> localize's homography
  # math), so it is a real base requirement — not an optional camera extra. Keeping it out of
  # base broke `pip install -e backend[dev]` in CI (ModuleNotFoundError: numpy on every app import).
  "numpy>=1.24",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "httpx>=0.27", "cryptography>=42"]
camera = ["opencv-python>=4.9", "ultralytics>=8.2"]
mqtt = ["paho-mqtt>=2.0"]
genai = ["google-generativeai>=0.7"]
mmwave = ["pyserial>=3.5"]
ble = ["bleak>=0.22"]
mdns = ["zeroconf>=0.132"]
mcp = ["mcp>=1.27"]
tls = ["cryptography>=42"]

[project.scripts]
# Lets an MCP host spawn the stdio bridge as `wavr-mcp` (no `-m`). Requires the [mcp]
# extra to run; importing wavr.mcp itself stays dependency-free.
wavr-mcp = "wavr.mcp_serve:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["wavr*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
