[package]
name = "wavr-desktop"
version = "0.1.0"
description = "Wavr Desktop — native shell around the loopback central"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Tiny blocking HTTP client, used only to poll the local backend's readiness probe.
ureq = "2"

[profile.release]
opt-level = "s"
lto = true
strip = true
