[package]
name = "wavr-desktop"
version = "0.1.0"
description = "Wavr Desktop — native shell around the loopback central"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Tiny blocking HTTP client, used only to poll the local backend's readiness probe.
ureq = "2"
# rustls (ring provider, no aws-lc so no NASM toolchain needed) for the HTTPS readiness
# probe. Feature set matches ureq's own so a single rustls is compiled; we supply a custom
# ClientConfig that PINS the backend's self-signed loopback cert (never trust-all).
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
# Read the backend's cert.pem (PEM -> DER) so we can pin it by byte-equality.
rustls-pemfile = "2"
# A second launch focuses the existing window instead of racing a second `python -m
# wavr.serve` for the same port (which would otherwise silently stall the new window on
# the "Starting…" placeholder).
tauri-plugin-single-instance = "2"
# Native OS alerts for high-severity backend events (intrusion/fall/rogue-DHCP/gateway).
# Used ONLY from Rust (a background poller of GET /api/alerts) -- never JS-invokable, so
# it adds no capabilities/permissions surface for the webview.
tauri-plugin-notification = "2"
# Opt-in (default OFF) launch-on-login so the desktop can act as a durable always-on Core
# node across reboots. Reconciled declaratively from WAVR_DESKTOP_AUTOSTART, same pattern
# as WAVR_MULTIDEVICE -- Rust-only, no capabilities/permissions surface for the webview.
tauri-plugin-autostart = "2"

# Windows only: scoped WebView2 self-signed-cert trust via ServerCertificateErrorDetected,
# plus a Job Object so the backend child is force-killed by the OS if this process ever
# exits without running our own cleanup (crash, Task Manager kill, power loss handler).
# webview2-com 0.38 + windows 0.61 match what Tauri 2.11 already pulls, so the
# ICoreWebView2Controller handed back by `PlatformWebview::controller()` is the same type.
[target.'cfg(windows)'.dependencies]
webview2-com = "0.38"
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
    # Enumerate the spawned backend's threads to resume the one CREATE_SUSPENDED thread
    # AFTER Job Object assignment (confine_backend_to_job_object) -- closes the
    # spawn -> assign TOCTOU race deterministically instead of racing a fast child.
    "Win32_System_Diagnostics_ToolHelp",
] }

[profile.release]
opt-level = "s"
lto = true
strip = true
